--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,13 @@
                                 "input": "public"
                             }
                         ],
-                        "styles": ["src/styles.css"],
+                        "styles": [
+                            "src/styles.css",
+                            "node_modules/@syncfusion/ej2-base/styles/material.css",
+                            "node_modules/@syncfusion/ej2-buttons/styles/material.css",
+                            "node_modules/@syncfusion/ej2-inputs/styles/material.css",
+                            "node_modules/@syncfusion/ej2-angular-navigations/styles/material.css"
+                        ],
                         "scripts": []
                     },
                     "configurations": {
