--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
                             "node_modules/@syncfusion/ej2-base/styles/material.css",
                             "node_modules/@syncfusion/ej2-buttons/styles/material.css",
                             "node_modules/@syncfusion/ej2-inputs/styles/material.css",
+                            "node_modules/@syncfusion/ej2-popups/styles/material.css",
                             "node_modules/@syncfusion/ej2-angular-navigations/styles/material.css"
                         ],
                         "scripts": []
