--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "@angular/router": "^19.0.0",
         "@syncfusion/ej2-angular-base": "^29.2.4",
         "@syncfusion/ej2-angular-buttons": "^29.2.5",
+        "@syncfusion/ej2-angular-inputs": "^29.2.5",
         "@syncfusion/ej2-angular-navigations": "^29.2.8",
+        "@syncfusion/ej2-angular-popups": "^29.2.8",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.15.0"
