--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@syncfusion/ej2-angular-base": "^29.2.4",
         "@syncfusion/ej2-angular-buttons": "^29.2.5",
         "@syncfusion/ej2-angular-inputs": "^29.2.5",
+        "@syncfusion/ej2-angular-lists": "^29.2.4",
         "@syncfusion/ej2-angular-navigations": "^29.2.8",
         "@syncfusion/ej2-angular-popups": "^29.2.8",
         "rxjs": "~7.8.0",
